@@ -11,10 +11,6 @@ from pywin.mfc import dialog
 from . import app
 
 
-class error(Exception):
-    pass
-
-
 class AppDialog(dialog.Dialog):
     "The dialog box for the application"
 
@@ -64,7 +60,9 @@ class DialogApp(app.CApp):
         self.dlg = self.frame = self.CreateDialog()
 
         if self.frame is None:
-            raise error("No dialog was created by CreateDialog()")
+            raise NotImplementedError(
+                "No dialog was created by CreateDialog(). Subclasses need to implement CreateDialog."
+            )
 
         self._obj_.InitDlgInstance(self.dlg)
         self.PreDoModal()
