@@ -5,11 +5,6 @@ import sys
 import win32api
 import win32con
 
-
-class error(Exception):
-    pass
-
-
 # A .py file has a CLSID associated with it (why? - dunno!)
 CLSIDPyFile = "{b51df050-06ae-11cf-ad3b-524153480001}"
 
@@ -81,7 +76,7 @@ def RegisterPythonExe(exeFullPath, exeAlias=None, exeAppPath=None):
     """
     # Note - Dont work on win32s (but we dont care anymore!)
     if exeAppPath:
-        raise error("Do not support exeAppPath argument currently")
+        raise ValueError("Do not support exeAppPath argument currently")
     if exeAlias is None:
         exeAlias = os.path.basename(exeFullPath)
     win32api.RegSetValue(
