@@ -16,12 +16,16 @@ Coming in build 307, as yet unreleased
 
 ### pywin32
 * Fixed accidentally trying to raise a `str` instead of an `Exception` in (#2270, @Avasam)
+  * `Pythonwin/pywin/debugger/debugger.py`
   * `Pythonwin/pywin/framework/dlgappcore.py`
   * `com/win32com/server/policy.py`
   * `win32/Lib/regutil.py`
   * `win32/scripts/VersionStamp/vssutil.py`
 * Removed the following unused symbols. They were meant to be used as Exceptions, but were accidentally strings (#2270, @Avasam)
   * `pywin.debugger.debugger.error`
+  * `pywin.framework.dlgappcore.error`
+  * `win32com.server.policy.error`
+  * `regutil.error`
   * `win32.scripts.VersionStamp.vssutil.error`
 * Marked `exc_type` and `exc_traceback` in `win32comext.axscript.client.error.AXScriptException.__init__` as deprecated.
   They are now unused and all information is taken from the `exc_value` parameter.
